# roleplay-discord

./: .gitignore  LICENSE  README.md  pyproject.toml  start.sh  technical_tasks.md
roleplay_discord/: __init__.py  config.py  main.py  main.py.backup
roleplay_discord/DBTest/: DBTest.py  __init__.py
roleplay_discord/Model/: User.py  database.py  models.py  world.py
roleplay_discord/Model/Core/: User.py  __init__.py
roleplay_discord/Tiled/: world.json  world.tiled-session  world.tmx
roleplay_discord/Tiled/tiles/: tilesets.xcf
roleplay_discord/model/: __init__.py  user.py
